parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    ASPASDUPLAS
    ASPASSIMPLES
    ASSERT
    BINARY
    BIT_AND
    BIT_NOT
    BIT_OR
    BIT_XOR
    BREAK
    COLON
    CONTINUE
    DEFER
    DOLLAR
    DOT
    DOTDOT
    ENUM
    EXCLAMATION
    GLOBAL
    IS
    ISREFTYPE
    LSHIFT
    MATCH
    NONE
    NOTACAOCIENTIFICA
    OCTALHEX
    QUESTION
    RSHIFT
    SIZEOF
    TYPE
    TYPEOF
    UNION
    UNSAFE

Grammar

Rule 0     S' -> program
Rule 1     program -> program_Import function_definition
Rule 2     program -> function_definition
Rule 3     program_Import -> IMPORT ID program_Import
Rule 4     program_Import -> IMPORT ID
Rule 5     function_definition -> FN ID LPAREN params RPAREN LBRACE block_statement RBRACE function_definition
Rule 6     function_definition -> FN ID LPAREN params RPAREN type LBRACE block_statement RBRACE function_definition
Rule 7     function_definition -> FN MAIN LPAREN RPAREN LBRACE block_statement RBRACE function_definition_without_main
Rule 8     function_definition_without_main -> FN ID LPAREN params RPAREN LBRACE block_statement RBRACE function_definition_without_main
Rule 9     function_definition_without_main -> FN ID LPAREN params RPAREN type LBRACE block_statement RBRACE function_definition_without_main
Rule 10    function_definition_without_main -> <empty>
Rule 11    params -> param more_params
Rule 12    more_params -> COMMA param more_params
Rule 13    more_params -> <empty>
Rule 14    param -> ID type
Rule 15    type -> INT
Rule 16    type -> F32
Rule 17    type -> F64
Rule 18    type -> STRING
Rule 19    type -> BOOL
Rule 20    type -> RUNE
Rule 21    block_statement -> statement
Rule 22    statement -> var_statement statement
Rule 23    statement -> var_assignment statement
Rule 24    statement -> func_call statement
Rule 25    statement -> if_statement statement
Rule 26    statement -> for_statement statement
Rule 27    statement -> return_statement
Rule 28    statement -> <empty>
Rule 29    statement -> list_statement statement
Rule 30    statement -> list_assignment statement
Rule 31    statement -> increment_rule statement
Rule 32    statement -> assignment statement
Rule 33    var_statement -> declaration_imutable
Rule 34    var_statement -> MUT ID DECLARE_ASSIGN expression
Rule 35    var_statement -> CONST ID DECLARE_ASSIGN expression
Rule 36    var_assignment -> ID ASSIGN expression
Rule 37    list_statement -> declaration_imutable_list
Rule 38    list_statement -> MUT ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
Rule 39    list_assignment -> ID LBRACKET NUMBER RBRACKET ASSIGN expression
Rule 40    func_call -> ID LPAREN id_list RPAREN
Rule 41    func_call -> ID LPAREN RPAREN
Rule 42    id_list -> expression more_expressions
Rule 43    more_expressions -> COMMA expression more_expressions
Rule 44    more_expressions -> <empty>
Rule 45    if_statement -> IF expression_relacional LBRACE statement RBRACE
Rule 46    if_statement -> IF expression_relacional LBRACE statement RBRACE elseop
Rule 47    elseop -> ELSE if_statement
Rule 48    elseop -> ELSE LBRACE statement RBRACE
Rule 49    for_statement -> FOR ID IN expression LBRACE statement RBRACE
Rule 50    for_statement -> FOR declaration_imutable SEMICOLON expression_relacional SEMICOLON increment_rule LBRACE statement RBRACE
Rule 51    for_statement -> FOR expression_relacional LBRACE statement RBRACE
Rule 52    declaration_imutable -> ID DECLARE_ASSIGN expression
Rule 53    declaration_imutable_list -> ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
Rule 54    return_statement -> RETURN expression
Rule 55    expression -> expression PLUS term
Rule 56    expression -> expression MINUS term
Rule 57    expression -> increment_rule
Rule 58    expression -> func_call
Rule 59    expression -> term
Rule 60    term -> term TIMES factor
Rule 61    term -> term DIVIDE factor
Rule 62    term -> term MOD factor
Rule 63    term -> factor
Rule 64    factor -> ID
Rule 65    factor -> NUMBER
Rule 66    factor -> NUMBERFLOAT
Rule 67    factor -> STRING
Rule 68    factor -> TRUE
Rule 69    factor -> FALSE
Rule 70    factor -> RUNE
Rule 71    factor -> LPAREN expression RPAREN
Rule 72    factor -> ID LBRACKET NUMBER RBRACKET
Rule 73    increment_rule -> ID INCREMENT
Rule 74    increment_rule -> ID DECREMENT
Rule 75    expression_relacional -> expression EQ expression
Rule 76    expression_relacional -> expression NEQ expression
Rule 77    expression_relacional -> expression LT expression
Rule 78    expression_relacional -> expression LE expression
Rule 79    expression_relacional -> expression GT expression
Rule 80    expression_relacional -> expression GE expression
Rule 81    expression_relacional -> expression AND expression
Rule 82    expression_relacional -> expression OR expression
Rule 83    expression_relacional -> NOT expression
Rule 84    assignment -> ID PLUS_ASSIGN expression
Rule 85    assignment -> ID MINUS_ASSIGN expression
Rule 86    assignment -> ID TIMES_ASSIGN expression
Rule 87    assignment -> ID DIVIDE_ASSIGN expression
Rule 88    assignment -> ID MOD_ASSIGN expression
Rule 89    assignment -> ID BIT_AND_ASSIGN expression
Rule 90    assignment -> ID BIT_OR_ASSIGN expression
Rule 91    assignment -> ID BIT_XOR_ASSIGN expression
Rule 92    assignment -> ID BIT_LSHIFT_ASSIGN expression
Rule 93    assignment -> ID BIT_RSHIFT_ASSIGN expression

Terminals, with rules where they appear

AND                  : 81
AS                   : 
ASPASDUPLAS          : 
ASPASSIMPLES         : 
ASSERT               : 
ASSIGN               : 36 39
BINARY               : 
BIT_AND              : 
BIT_AND_ASSIGN       : 89
BIT_LSHIFT_ASSIGN    : 92
BIT_NOT              : 
BIT_OR               : 
BIT_OR_ASSIGN        : 90
BIT_RSHIFT_ASSIGN    : 93
BIT_XOR              : 
BIT_XOR_ASSIGN       : 91
BOOL                 : 19
BREAK                : 
COLON                : 
COMMA                : 12 43
CONST                : 35
CONTINUE             : 
DECLARE_ASSIGN       : 34 35 38 52 53
DECREMENT            : 74
DEFER                : 
DIVIDE               : 61
DIVIDE_ASSIGN        : 87
DOLLAR               : 
DOT                  : 
DOTDOT               : 
ELSE                 : 47 48
ENUM                 : 
EQ                   : 75
EXCLAMATION          : 
F32                  : 16
F64                  : 17
FALSE                : 69
FN                   : 5 6 7 8 9
FOR                  : 49 50 51
GE                   : 80
GLOBAL               : 
GT                   : 79
ID                   : 3 4 5 6 8 9 14 34 35 36 38 39 40 41 49 52 53 64 72 73 74 84 85 86 87 88 89 90 91 92 93
IF                   : 45 46
IMPORT               : 3 4
IN                   : 49
INCREMENT            : 73
INT                  : 15
IS                   : 
ISREFTYPE            : 
LBRACE               : 5 6 7 8 9 45 46 48 49 50 51
LBRACKET             : 38 39 53 72
LE                   : 78
LPAREN               : 5 6 7 8 9 40 41 71
LSHIFT               : 
LT                   : 77
MAIN                 : 7
MATCH                : 
MINUS                : 56
MINUS_ASSIGN         : 85
MOD                  : 62
MOD_ASSIGN           : 88
MUT                  : 34 38
NEQ                  : 76
NONE                 : 
NOT                  : 83
NOTACAOCIENTIFICA    : 
NUMBER               : 39 65 72
NUMBERFLOAT          : 66
OCTALHEX             : 
OR                   : 82
PLUS                 : 55
PLUS_ASSIGN          : 84
QUESTION             : 
RBRACE               : 5 6 7 8 9 45 46 48 49 50 51
RBRACKET             : 38 39 53 72
RETURN               : 54
RPAREN               : 5 6 7 8 9 40 41 71
RSHIFT               : 
RUNE                 : 20 70
SEMICOLON            : 50 50
SIZEOF               : 
STRING               : 18 67
TIMES                : 60
TIMES_ASSIGN         : 86
TRUE                 : 68
TYPE                 : 
TYPEOF               : 
UNION                : 
UNSAFE               : 
error                : 

Nonterminals, with rules where they appear

assignment           : 32
block_statement      : 5 6 7 8 9
declaration_imutable : 33 50
declaration_imutable_list : 37
elseop               : 46
expression           : 34 35 36 39 42 43 49 52 54 55 56 71 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 84 85 86 87 88 89 90 91 92 93
expression_relacional : 45 46 50 51
factor               : 60 61 62 63
for_statement        : 26
func_call            : 24 58
function_definition  : 1 2 5 6
function_definition_without_main : 7 8 9
id_list              : 38 40 53
if_statement         : 25 47
increment_rule       : 31 50 57
list_assignment      : 30
list_statement       : 29
more_expressions     : 42 43
more_params          : 11 12
param                : 11 12
params               : 5 6 8 9
program              : 0
program_Import       : 1 3
return_statement     : 27
statement            : 21 22 23 24 25 26 29 30 31 32 45 46 48 49 50 51
term                 : 55 56 59 60 61 62
type                 : 6 9 14
var_assignment       : 23
var_statement        : 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_Import function_definition
    (2) program -> . function_definition
    (3) program_Import -> . IMPORT ID program_Import
    (4) program_Import -> . IMPORT ID
    (5) function_definition -> . FN ID LPAREN params RPAREN LBRACE block_statement RBRACE function_definition
    (6) function_definition -> . FN ID LPAREN params RPAREN type LBRACE block_statement RBRACE function_definition
    (7) function_definition -> . FN MAIN LPAREN RPAREN LBRACE block_statement RBRACE function_definition_without_main

    IMPORT          shift and go to state 4
    FN              shift and go to state 5

    program                        shift and go to state 1
    program_Import                 shift and go to state 2
    function_definition            shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> program_Import . function_definition
    (5) function_definition -> . FN ID LPAREN params RPAREN LBRACE block_statement RBRACE function_definition
    (6) function_definition -> . FN ID LPAREN params RPAREN type LBRACE block_statement RBRACE function_definition
    (7) function_definition -> . FN MAIN LPAREN RPAREN LBRACE block_statement RBRACE function_definition_without_main

    FN              shift and go to state 5

    function_definition            shift and go to state 6

state 3

    (2) program -> function_definition .

    $end            reduce using rule 2 (program -> function_definition .)


state 4

    (3) program_Import -> IMPORT . ID program_Import
    (4) program_Import -> IMPORT . ID

    ID              shift and go to state 7


state 5

    (5) function_definition -> FN . ID LPAREN params RPAREN LBRACE block_statement RBRACE function_definition
    (6) function_definition -> FN . ID LPAREN params RPAREN type LBRACE block_statement RBRACE function_definition
    (7) function_definition -> FN . MAIN LPAREN RPAREN LBRACE block_statement RBRACE function_definition_without_main

    ID              shift and go to state 8
    MAIN            shift and go to state 9


state 6

    (1) program -> program_Import function_definition .

    $end            reduce using rule 1 (program -> program_Import function_definition .)


state 7

    (3) program_Import -> IMPORT ID . program_Import
    (4) program_Import -> IMPORT ID .
    (3) program_Import -> . IMPORT ID program_Import
    (4) program_Import -> . IMPORT ID

    FN              reduce using rule 4 (program_Import -> IMPORT ID .)
    IMPORT          shift and go to state 4

    program_Import                 shift and go to state 10

state 8

    (5) function_definition -> FN ID . LPAREN params RPAREN LBRACE block_statement RBRACE function_definition
    (6) function_definition -> FN ID . LPAREN params RPAREN type LBRACE block_statement RBRACE function_definition

    LPAREN          shift and go to state 11


state 9

    (7) function_definition -> FN MAIN . LPAREN RPAREN LBRACE block_statement RBRACE function_definition_without_main

    LPAREN          shift and go to state 12


state 10

    (3) program_Import -> IMPORT ID program_Import .

    FN              reduce using rule 3 (program_Import -> IMPORT ID program_Import .)


state 11

    (5) function_definition -> FN ID LPAREN . params RPAREN LBRACE block_statement RBRACE function_definition
    (6) function_definition -> FN ID LPAREN . params RPAREN type LBRACE block_statement RBRACE function_definition
    (11) params -> . param more_params
    (14) param -> . ID type

    ID              shift and go to state 13

    params                         shift and go to state 14
    param                          shift and go to state 15

state 12

    (7) function_definition -> FN MAIN LPAREN . RPAREN LBRACE block_statement RBRACE function_definition_without_main

    RPAREN          shift and go to state 16


state 13

    (14) param -> ID . type
    (15) type -> . INT
    (16) type -> . F32
    (17) type -> . F64
    (18) type -> . STRING
    (19) type -> . BOOL
    (20) type -> . RUNE

    INT             shift and go to state 18
    F32             shift and go to state 19
    F64             shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    RUNE            shift and go to state 23

    type                           shift and go to state 17

state 14

    (5) function_definition -> FN ID LPAREN params . RPAREN LBRACE block_statement RBRACE function_definition
    (6) function_definition -> FN ID LPAREN params . RPAREN type LBRACE block_statement RBRACE function_definition

    RPAREN          shift and go to state 24


state 15

    (11) params -> param . more_params
    (12) more_params -> . COMMA param more_params
    (13) more_params -> .

    COMMA           shift and go to state 26
    RPAREN          reduce using rule 13 (more_params -> .)

    more_params                    shift and go to state 25

state 16

    (7) function_definition -> FN MAIN LPAREN RPAREN . LBRACE block_statement RBRACE function_definition_without_main

    LBRACE          shift and go to state 27


state 17

    (14) param -> ID type .

    COMMA           reduce using rule 14 (param -> ID type .)
    RPAREN          reduce using rule 14 (param -> ID type .)


state 18

    (15) type -> INT .

    COMMA           reduce using rule 15 (type -> INT .)
    RPAREN          reduce using rule 15 (type -> INT .)
    LBRACE          reduce using rule 15 (type -> INT .)


state 19

    (16) type -> F32 .

    COMMA           reduce using rule 16 (type -> F32 .)
    RPAREN          reduce using rule 16 (type -> F32 .)
    LBRACE          reduce using rule 16 (type -> F32 .)


state 20

    (17) type -> F64 .

    COMMA           reduce using rule 17 (type -> F64 .)
    RPAREN          reduce using rule 17 (type -> F64 .)
    LBRACE          reduce using rule 17 (type -> F64 .)


state 21

    (18) type -> STRING .

    COMMA           reduce using rule 18 (type -> STRING .)
    RPAREN          reduce using rule 18 (type -> STRING .)
    LBRACE          reduce using rule 18 (type -> STRING .)


state 22

    (19) type -> BOOL .

    COMMA           reduce using rule 19 (type -> BOOL .)
    RPAREN          reduce using rule 19 (type -> BOOL .)
    LBRACE          reduce using rule 19 (type -> BOOL .)


state 23

    (20) type -> RUNE .

    COMMA           reduce using rule 20 (type -> RUNE .)
    RPAREN          reduce using rule 20 (type -> RUNE .)
    LBRACE          reduce using rule 20 (type -> RUNE .)


state 24

    (5) function_definition -> FN ID LPAREN params RPAREN . LBRACE block_statement RBRACE function_definition
    (6) function_definition -> FN ID LPAREN params RPAREN . type LBRACE block_statement RBRACE function_definition
    (15) type -> . INT
    (16) type -> . F32
    (17) type -> . F64
    (18) type -> . STRING
    (19) type -> . BOOL
    (20) type -> . RUNE

    LBRACE          shift and go to state 28
    INT             shift and go to state 18
    F32             shift and go to state 19
    F64             shift and go to state 20
    STRING          shift and go to state 21
    BOOL            shift and go to state 22
    RUNE            shift and go to state 23

    type                           shift and go to state 29

state 25

    (11) params -> param more_params .

    RPAREN          reduce using rule 11 (params -> param more_params .)


state 26

    (12) more_params -> COMMA . param more_params
    (14) param -> . ID type

    ID              shift and go to state 13

    param                          shift and go to state 30

state 27

    (7) function_definition -> FN MAIN LPAREN RPAREN LBRACE . block_statement RBRACE function_definition_without_main
    (21) block_statement -> . statement
    (22) statement -> . var_statement statement
    (23) statement -> . var_assignment statement
    (24) statement -> . func_call statement
    (25) statement -> . if_statement statement
    (26) statement -> . for_statement statement
    (27) statement -> . return_statement
    (28) statement -> .
    (29) statement -> . list_statement statement
    (30) statement -> . list_assignment statement
    (31) statement -> . increment_rule statement
    (32) statement -> . assignment statement
    (33) var_statement -> . declaration_imutable
    (34) var_statement -> . MUT ID DECLARE_ASSIGN expression
    (35) var_statement -> . CONST ID DECLARE_ASSIGN expression
    (36) var_assignment -> . ID ASSIGN expression
    (40) func_call -> . ID LPAREN id_list RPAREN
    (41) func_call -> . ID LPAREN RPAREN
    (45) if_statement -> . IF expression_relacional LBRACE statement RBRACE
    (46) if_statement -> . IF expression_relacional LBRACE statement RBRACE elseop
    (49) for_statement -> . FOR ID IN expression LBRACE statement RBRACE
    (50) for_statement -> . FOR declaration_imutable SEMICOLON expression_relacional SEMICOLON increment_rule LBRACE statement RBRACE
    (51) for_statement -> . FOR expression_relacional LBRACE statement RBRACE
    (54) return_statement -> . RETURN expression
    (37) list_statement -> . declaration_imutable_list
    (38) list_statement -> . MUT ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
    (39) list_assignment -> . ID LBRACKET NUMBER RBRACKET ASSIGN expression
    (73) increment_rule -> . ID INCREMENT
    (74) increment_rule -> . ID DECREMENT
    (84) assignment -> . ID PLUS_ASSIGN expression
    (85) assignment -> . ID MINUS_ASSIGN expression
    (86) assignment -> . ID TIMES_ASSIGN expression
    (87) assignment -> . ID DIVIDE_ASSIGN expression
    (88) assignment -> . ID MOD_ASSIGN expression
    (89) assignment -> . ID BIT_AND_ASSIGN expression
    (90) assignment -> . ID BIT_OR_ASSIGN expression
    (91) assignment -> . ID BIT_XOR_ASSIGN expression
    (92) assignment -> . ID BIT_LSHIFT_ASSIGN expression
    (93) assignment -> . ID BIT_RSHIFT_ASSIGN expression
    (52) declaration_imutable -> . ID DECLARE_ASSIGN expression
    (53) declaration_imutable_list -> . ID DECLARE_ASSIGN LBRACKET id_list RBRACKET

    RBRACE          reduce using rule 28 (statement -> .)
    MUT             shift and go to state 44
    CONST           shift and go to state 46
    ID              shift and go to state 45
    IF              shift and go to state 47
    FOR             shift and go to state 48
    RETURN          shift and go to state 49

    block_statement                shift and go to state 31
    statement                      shift and go to state 32
    var_statement                  shift and go to state 33
    var_assignment                 shift and go to state 34
    func_call                      shift and go to state 35
    if_statement                   shift and go to state 36
    for_statement                  shift and go to state 37
    return_statement               shift and go to state 38
    list_statement                 shift and go to state 39
    list_assignment                shift and go to state 40
    increment_rule                 shift and go to state 41
    assignment                     shift and go to state 42
    declaration_imutable           shift and go to state 43
    declaration_imutable_list      shift and go to state 50

state 28

    (5) function_definition -> FN ID LPAREN params RPAREN LBRACE . block_statement RBRACE function_definition
    (21) block_statement -> . statement
    (22) statement -> . var_statement statement
    (23) statement -> . var_assignment statement
    (24) statement -> . func_call statement
    (25) statement -> . if_statement statement
    (26) statement -> . for_statement statement
    (27) statement -> . return_statement
    (28) statement -> .
    (29) statement -> . list_statement statement
    (30) statement -> . list_assignment statement
    (31) statement -> . increment_rule statement
    (32) statement -> . assignment statement
    (33) var_statement -> . declaration_imutable
    (34) var_statement -> . MUT ID DECLARE_ASSIGN expression
    (35) var_statement -> . CONST ID DECLARE_ASSIGN expression
    (36) var_assignment -> . ID ASSIGN expression
    (40) func_call -> . ID LPAREN id_list RPAREN
    (41) func_call -> . ID LPAREN RPAREN
    (45) if_statement -> . IF expression_relacional LBRACE statement RBRACE
    (46) if_statement -> . IF expression_relacional LBRACE statement RBRACE elseop
    (49) for_statement -> . FOR ID IN expression LBRACE statement RBRACE
    (50) for_statement -> . FOR declaration_imutable SEMICOLON expression_relacional SEMICOLON increment_rule LBRACE statement RBRACE
    (51) for_statement -> . FOR expression_relacional LBRACE statement RBRACE
    (54) return_statement -> . RETURN expression
    (37) list_statement -> . declaration_imutable_list
    (38) list_statement -> . MUT ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
    (39) list_assignment -> . ID LBRACKET NUMBER RBRACKET ASSIGN expression
    (73) increment_rule -> . ID INCREMENT
    (74) increment_rule -> . ID DECREMENT
    (84) assignment -> . ID PLUS_ASSIGN expression
    (85) assignment -> . ID MINUS_ASSIGN expression
    (86) assignment -> . ID TIMES_ASSIGN expression
    (87) assignment -> . ID DIVIDE_ASSIGN expression
    (88) assignment -> . ID MOD_ASSIGN expression
    (89) assignment -> . ID BIT_AND_ASSIGN expression
    (90) assignment -> . ID BIT_OR_ASSIGN expression
    (91) assignment -> . ID BIT_XOR_ASSIGN expression
    (92) assignment -> . ID BIT_LSHIFT_ASSIGN expression
    (93) assignment -> . ID BIT_RSHIFT_ASSIGN expression
    (52) declaration_imutable -> . ID DECLARE_ASSIGN expression
    (53) declaration_imutable_list -> . ID DECLARE_ASSIGN LBRACKET id_list RBRACKET

    RBRACE          reduce using rule 28 (statement -> .)
    MUT             shift and go to state 44
    CONST           shift and go to state 46
    ID              shift and go to state 45
    IF              shift and go to state 47
    FOR             shift and go to state 48
    RETURN          shift and go to state 49

    block_statement                shift and go to state 51
    statement                      shift and go to state 32
    var_statement                  shift and go to state 33
    var_assignment                 shift and go to state 34
    func_call                      shift and go to state 35
    if_statement                   shift and go to state 36
    for_statement                  shift and go to state 37
    return_statement               shift and go to state 38
    list_statement                 shift and go to state 39
    list_assignment                shift and go to state 40
    increment_rule                 shift and go to state 41
    assignment                     shift and go to state 42
    declaration_imutable           shift and go to state 43
    declaration_imutable_list      shift and go to state 50

state 29

    (6) function_definition -> FN ID LPAREN params RPAREN type . LBRACE block_statement RBRACE function_definition

    LBRACE          shift and go to state 52


state 30

    (12) more_params -> COMMA param . more_params
    (12) more_params -> . COMMA param more_params
    (13) more_params -> .

    COMMA           shift and go to state 26
    RPAREN          reduce using rule 13 (more_params -> .)

    more_params                    shift and go to state 53

state 31

    (7) function_definition -> FN MAIN LPAREN RPAREN LBRACE block_statement . RBRACE function_definition_without_main

    RBRACE          shift and go to state 54


state 32

    (21) block_statement -> statement .

    RBRACE          reduce using rule 21 (block_statement -> statement .)


state 33

    (22) statement -> var_statement . statement
    (22) statement -> . var_statement statement
    (23) statement -> . var_assignment statement
    (24) statement -> . func_call statement
    (25) statement -> . if_statement statement
    (26) statement -> . for_statement statement
    (27) statement -> . return_statement
    (28) statement -> .
    (29) statement -> . list_statement statement
    (30) statement -> . list_assignment statement
    (31) statement -> . increment_rule statement
    (32) statement -> . assignment statement
    (33) var_statement -> . declaration_imutable
    (34) var_statement -> . MUT ID DECLARE_ASSIGN expression
    (35) var_statement -> . CONST ID DECLARE_ASSIGN expression
    (36) var_assignment -> . ID ASSIGN expression
    (40) func_call -> . ID LPAREN id_list RPAREN
    (41) func_call -> . ID LPAREN RPAREN
    (45) if_statement -> . IF expression_relacional LBRACE statement RBRACE
    (46) if_statement -> . IF expression_relacional LBRACE statement RBRACE elseop
    (49) for_statement -> . FOR ID IN expression LBRACE statement RBRACE
    (50) for_statement -> . FOR declaration_imutable SEMICOLON expression_relacional SEMICOLON increment_rule LBRACE statement RBRACE
    (51) for_statement -> . FOR expression_relacional LBRACE statement RBRACE
    (54) return_statement -> . RETURN expression
    (37) list_statement -> . declaration_imutable_list
    (38) list_statement -> . MUT ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
    (39) list_assignment -> . ID LBRACKET NUMBER RBRACKET ASSIGN expression
    (73) increment_rule -> . ID INCREMENT
    (74) increment_rule -> . ID DECREMENT
    (84) assignment -> . ID PLUS_ASSIGN expression
    (85) assignment -> . ID MINUS_ASSIGN expression
    (86) assignment -> . ID TIMES_ASSIGN expression
    (87) assignment -> . ID DIVIDE_ASSIGN expression
    (88) assignment -> . ID MOD_ASSIGN expression
    (89) assignment -> . ID BIT_AND_ASSIGN expression
    (90) assignment -> . ID BIT_OR_ASSIGN expression
    (91) assignment -> . ID BIT_XOR_ASSIGN expression
    (92) assignment -> . ID BIT_LSHIFT_ASSIGN expression
    (93) assignment -> . ID BIT_RSHIFT_ASSIGN expression
    (52) declaration_imutable -> . ID DECLARE_ASSIGN expression
    (53) declaration_imutable_list -> . ID DECLARE_ASSIGN LBRACKET id_list RBRACKET

    RBRACE          reduce using rule 28 (statement -> .)
    MUT             shift and go to state 44
    CONST           shift and go to state 46
    ID              shift and go to state 45
    IF              shift and go to state 47
    FOR             shift and go to state 48
    RETURN          shift and go to state 49

    var_statement                  shift and go to state 33
    statement                      shift and go to state 55
    var_assignment                 shift and go to state 34
    func_call                      shift and go to state 35
    if_statement                   shift and go to state 36
    for_statement                  shift and go to state 37
    return_statement               shift and go to state 38
    list_statement                 shift and go to state 39
    list_assignment                shift and go to state 40
    increment_rule                 shift and go to state 41
    assignment                     shift and go to state 42
    declaration_imutable           shift and go to state 43
    declaration_imutable_list      shift and go to state 50

state 34

    (23) statement -> var_assignment . statement
    (22) statement -> . var_statement statement
    (23) statement -> . var_assignment statement
    (24) statement -> . func_call statement
    (25) statement -> . if_statement statement
    (26) statement -> . for_statement statement
    (27) statement -> . return_statement
    (28) statement -> .
    (29) statement -> . list_statement statement
    (30) statement -> . list_assignment statement
    (31) statement -> . increment_rule statement
    (32) statement -> . assignment statement
    (33) var_statement -> . declaration_imutable
    (34) var_statement -> . MUT ID DECLARE_ASSIGN expression
    (35) var_statement -> . CONST ID DECLARE_ASSIGN expression
    (36) var_assignment -> . ID ASSIGN expression
    (40) func_call -> . ID LPAREN id_list RPAREN
    (41) func_call -> . ID LPAREN RPAREN
    (45) if_statement -> . IF expression_relacional LBRACE statement RBRACE
    (46) if_statement -> . IF expression_relacional LBRACE statement RBRACE elseop
    (49) for_statement -> . FOR ID IN expression LBRACE statement RBRACE
    (50) for_statement -> . FOR declaration_imutable SEMICOLON expression_relacional SEMICOLON increment_rule LBRACE statement RBRACE
    (51) for_statement -> . FOR expression_relacional LBRACE statement RBRACE
    (54) return_statement -> . RETURN expression
    (37) list_statement -> . declaration_imutable_list
    (38) list_statement -> . MUT ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
    (39) list_assignment -> . ID LBRACKET NUMBER RBRACKET ASSIGN expression
    (73) increment_rule -> . ID INCREMENT
    (74) increment_rule -> . ID DECREMENT
    (84) assignment -> . ID PLUS_ASSIGN expression
    (85) assignment -> . ID MINUS_ASSIGN expression
    (86) assignment -> . ID TIMES_ASSIGN expression
    (87) assignment -> . ID DIVIDE_ASSIGN expression
    (88) assignment -> . ID MOD_ASSIGN expression
    (89) assignment -> . ID BIT_AND_ASSIGN expression
    (90) assignment -> . ID BIT_OR_ASSIGN expression
    (91) assignment -> . ID BIT_XOR_ASSIGN expression
    (92) assignment -> . ID BIT_LSHIFT_ASSIGN expression
    (93) assignment -> . ID BIT_RSHIFT_ASSIGN expression
    (52) declaration_imutable -> . ID DECLARE_ASSIGN expression
    (53) declaration_imutable_list -> . ID DECLARE_ASSIGN LBRACKET id_list RBRACKET

    RBRACE          reduce using rule 28 (statement -> .)
    MUT             shift and go to state 44
    CONST           shift and go to state 46
    ID              shift and go to state 45
    IF              shift and go to state 47
    FOR             shift and go to state 48
    RETURN          shift and go to state 49

    var_assignment                 shift and go to state 34
    statement                      shift and go to state 56
    var_statement                  shift and go to state 33
    func_call                      shift and go to state 35
    if_statement                   shift and go to state 36
    for_statement                  shift and go to state 37
    return_statement               shift and go to state 38
    list_statement                 shift and go to state 39
    list_assignment                shift and go to state 40
    increment_rule                 shift and go to state 41
    assignment                     shift and go to state 42
    declaration_imutable           shift and go to state 43
    declaration_imutable_list      shift and go to state 50

state 35

    (24) statement -> func_call . statement
    (22) statement -> . var_statement statement
    (23) statement -> . var_assignment statement
    (24) statement -> . func_call statement
    (25) statement -> . if_statement statement
    (26) statement -> . for_statement statement
    (27) statement -> . return_statement
    (28) statement -> .
    (29) statement -> . list_statement statement
    (30) statement -> . list_assignment statement
    (31) statement -> . increment_rule statement
    (32) statement -> . assignment statement
    (33) var_statement -> . declaration_imutable
    (34) var_statement -> . MUT ID DECLARE_ASSIGN expression
    (35) var_statement -> . CONST ID DECLARE_ASSIGN expression
    (36) var_assignment -> . ID ASSIGN expression
    (40) func_call -> . ID LPAREN id_list RPAREN
    (41) func_call -> . ID LPAREN RPAREN
    (45) if_statement -> . IF expression_relacional LBRACE statement RBRACE
    (46) if_statement -> . IF expression_relacional LBRACE statement RBRACE elseop
    (49) for_statement -> . FOR ID IN expression LBRACE statement RBRACE
    (50) for_statement -> . FOR declaration_imutable SEMICOLON expression_relacional SEMICOLON increment_rule LBRACE statement RBRACE
    (51) for_statement -> . FOR expression_relacional LBRACE statement RBRACE
    (54) return_statement -> . RETURN expression
    (37) list_statement -> . declaration_imutable_list
    (38) list_statement -> . MUT ID DECLARE_ASSIGN LBRACKET id_list RBRACKET
    (39) list_assignment -> . ID LBRACKET NUMBER RBRACKET ASSIGN expression
    (73) increment_rule -> . ID INCREMENT
    (74) increment_rule -> . ID DECREMENT
    (84) assignment -> . ID PLUS_ASSIGN expression
    (85) assignment -> . ID MINUS_ASSIGN expression
    (86) assignment -> . ID TIMES_ASSIGN expression
    (87) assignment -> . ID DIVIDE_ASSIGN expression
    (88) assignment -> . ID MOD_ASSIGN expression
    (89) assignment -> . ID BIT_AND_ASSIGN expression
    (90) assignment -> . ID BIT_OR_ASSIGN expression
    (91) assignment -> . ID BIT_XOR_ASSIGN expression
    (92) assignment -> . ID BIT_LSHIFT_ASSIGN expression
    (93) assignment -> . ID BIT_RSHIFT_ASSIGN expression
    (52) declaration_imutable -> . ID DECLARE_ASSIGN expression
    (53) declaration_imutable_list -> . ID DECLARE_ASSIGN LBRACKET id_list RBRACKET

    RBRACE          reduce using rule 28 (statement -> .)
    MUT             shift and go to state 44
    CONST           shift and go to state 46
    ID              shift and go to state 45
    IF              shift and go to state 47
    FOR             shift and go to state 48
    RETURN          shift and go to state 49

    func_call                      shift and go to state 35
    statement                      shift and go to state 57
    var_statement                  shift and go to state 33
    var_assignment                 shift and go to state 34
    if_statement                   shift and go to state 36
    for_statement                  shift and go to state 37
    return_statement               shift and go to state 38
    list_statement                 shift and go to state 39
    list_assignment                shift and go to state 40
    increment_rule                 shift and go to state 41
    assignment                     shift and go to state 42
    declaration_imutable           shift and go to state 43
    declaration_imutable_list      shift and go to state 50

state 36
